<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.chat.langchat.app.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fbLoginTexts"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/fbloginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firebaseLoginText"
            android:textSize="20sp"
            android:layout_marginEnd="5dp"
            />
        <TextView
            android:id="@+id/createAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/firebaseLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fbLoginTexts"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="textEmailAddress"
            android:maxLength="21"
            android:hint="@string/userEmailHint"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="textPassword"
            android:maxLength="21"
            android:hint="@string/passwordHint"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/fbLoginButton"
            android:text="@string/loginButtonText"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/externalProvidersLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firebaseLogin"
        >

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/providersloginText"
            android:layout_below="@id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/providersLoginText"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

    </RelativeLayout>



</RelativeLayout>
