<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              tools:context="com.chat.langchat.app.SignupFragment">



    <TextView
        android:id="@+id/createAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAccountText"
        android:clickable="true"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        />



        <android.support.v7.widget.CardView
            android:id="@+id/picGroup"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:elevation="12dp"
            android:shape="ring"
            app:cardCornerRadius="22dp"
            android:innerRadius="0dp"
            android:thicknessRatio="1.9">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:id="@+id/accountPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_person_black_24dp"
                    />

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="12dp"
                    android:shape="ring"
                    app:cardCornerRadius="10dp"
                    android:innerRadius="0dp"
                    android:thicknessRatio="1.9"
                    android:layout_alignBottom="@id/accountPhoto"
                    android:layout_alignEnd="@id/accountPhoto"
                    >
                    <ImageView
                        android:id="@+id/userImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ic_insert_photo_black_24dp"
                        />

                </android.support.v7.widget.CardView>


            </RelativeLayout>
        </android.support.v7.widget.CardView>



    <LinearLayout
        android:id="@+id/firebaseLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/displayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="textPersonName|textNoSuggestions"
            android:maxLength="21"
            android:hint="@string/displayNameHint"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="textEmailAddress"
            android:maxLength="21"
            android:hint="@string/userEmailHint"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="textPassword"
            android:maxLength="21"
            android:hint="@string/passwordHint"/>

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="textPassword"
            android:maxLength="21"
            android:hint="@string/confirmPasswordHint"
            />

        <!-- ADDED SPACER VIEW -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <!-- /ADDED SPACER VIEW -->

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="?attr/colorPrimary"
            android:id="@+id/signup"
            android:text="@string/signUpButtonText"/>
    </LinearLayout>

</LinearLayout>
